--- a/notebooks/recommender-system.ipynb
+++ b/notebooks/recommender-system.ipynb
@@ -2,9 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+    }
+   ],
    "source": [
     "# Data manipulation\n",
     "import numpy as np\n",
@@ -70,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\nTest RMSE: 1.117268\n"
+     "text": "\nTest RMSE: 1.117850\n"
     }
    ],
    "source": [
@@ -96,20 +102,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SGD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch  1 / 20  -  train_rmse: 0.12743109045394502\nEpoch  2 / 20  -  train_rmse: 0.2279631897517531\nEpoch  3 / 20  -  train_rmse: 0.33766202245142213\nEpoch  4 / 20  -  train_rmse: 0.42638235786208967\nEpoch  5 / 20  -  train_rmse: 0.4916609904263343\nEpoch  6 / 20  -  train_rmse: 0.5381164059789344\nEpoch  7 / 20  -  train_rmse: 0.5708272955763287\nEpoch  8 / 20  -  train_rmse: 0.5938506550749628\nEpoch  9 / 20  -  train_rmse: 0.6101406370252674\nEpoch  10 / 20  -  train_rmse: 0.621770036561658\nEpoch  11 / 20  -  train_rmse: 0.630169029453688\nEpoch  12 / 20  -  train_rmse: 0.6363173234609523\nEpoch  13 / 20  -  train_rmse: 0.6408849295459511\nEpoch  14 / 20  -  train_rmse: 0.6443309987010555\nEpoch  15 / 20  -  train_rmse: 0.6469716980846663\nEpoch  16 / 20  -  train_rmse: 0.6490262719430819\nEpoch  17 / 20  -  train_rmse: 0.6506481109593726\nEpoch  18 / 20  -  train_rmse: 0.651945663000393\nEpoch  19 / 20  -  train_rmse: 0.6529965131523516\nEpoch  20 / 20  -  train_rmse: 0.6538568878300737\n\nTest RMSE: 0.9092\nWall time: 1.14 s\n"
+     "text": "Epoch  1 / 20  -  train_rmse: 0.871980978214218\nEpoch  2 / 20  -  train_rmse: 0.8374227238174543\nEpoch  3 / 20  -  train_rmse: 0.8245628365555198\nEpoch  4 / 20  -  train_rmse: 0.8181313766158749\nEpoch  5 / 20  -  train_rmse: 0.8144161721838907\nEpoch  6 / 20  -  train_rmse: 0.8120702230072291\nEpoch  7 / 20  -  train_rmse: 0.8104958250944153\nEpoch  8 / 20  -  train_rmse: 0.8093910914643307\nEpoch  9 / 20  -  train_rmse: 0.8085888629632715\nEpoch  10 / 20  -  train_rmse: 0.8079900351762842\nEpoch  11 / 20  -  train_rmse: 0.8075326908098902\nEpoch  12 / 20  -  train_rmse: 0.8071765151351332\nEpoch  13 / 20  -  train_rmse: 0.8068943680095578\nEpoch  14 / 20  -  train_rmse: 0.8066674668501668\nEpoch  15 / 20  -  train_rmse: 0.8064825062164301\nEpoch  16 / 20  -  train_rmse: 0.8063298697247823\nEpoch  17 / 20  -  train_rmse: 0.8062024845531691\nEpoch  18 / 20  -  train_rmse: 0.8060950676200299\nEpoch  19 / 20  -  train_rmse: 0.8060036178439534\nEpoch  20 / 20  -  train_rmse: 0.8059250671127095\n\nTest RMSE: 0.9094\nWall time: 352 ms\n"
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "baseline_model = BaselineModel(n_epochs = 20, reg = 0.005)\n",
+    "baseline_model = BaselineModel(n_epochs = 20, reg = 0.005, verbose=1)\n",
     "baseline_model.fit(train)\n",
     "\n",
     "pred = baseline_model.predict(test)\n",
@@ -122,28 +135,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom SVD"
+    "### ALS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Epoch  1 / 20  -  train_rmse: 0.8431114587618241\nEpoch  2 / 20  -  train_rmse: 0.8054503687558924\nEpoch  3 / 20  -  train_rmse: 0.8037076611607052\nEpoch  4 / 20  -  train_rmse: 0.803611324323333\nEpoch  5 / 20  -  train_rmse: 0.8036057069019398\nEpoch  6 / 20  -  train_rmse: 0.8036053692857239\nEpoch  7 / 20  -  train_rmse: 0.8036053477643588\nEpoch  8 / 20  -  train_rmse: 0.8036053461252116\nEpoch  9 / 20  -  train_rmse: 0.8036053459404653\nEpoch  10 / 20  -  train_rmse: 0.8036053459081435\nEpoch  11 / 20  -  train_rmse: 0.803605345900974\nEpoch  12 / 20  -  train_rmse: 0.8036053458992236\nEpoch  13 / 20  -  train_rmse: 0.8036053458987541\nEpoch  14 / 20  -  train_rmse: 0.8036053458985319\nEpoch  15 / 20  -  train_rmse: 0.8036053458984738\nEpoch  16 / 20  -  train_rmse: 0.8036053458983718\nEpoch  17 / 20  -  train_rmse: 0.8036053458982573\nEpoch  18 / 20  -  train_rmse: 0.8036053458981735\nEpoch  19 / 20  -  train_rmse: 0.8036053458980996\nEpoch  20 / 20  -  train_rmse: 0.803605345898018\n\nTest RMSE: 0.9090\nWall time: 2.33 s\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "baseline_model = BaselineModel(method='als', n_epochs = 20, reg = 0.005, verbose=1)\n",
+    "baseline_model.fit(train)\n",
+    "\n",
+    "pred = baseline_model.predict(test)\n",
+    "rmse = mean_squared_error(test['rating'], pred, squared = False)\n",
+    "\n",
+    "print(f'\\nTest RMSE: {rmse:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVD by Simon Funk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch  1 / 20  -  train_rmse: 0.4200119423824712\nEpoch  2 / 20  -  train_rmse: 0.5134161673945182\nEpoch  3 / 20  -  train_rmse: 0.5490851682852552\nEpoch  4 / 20  -  train_rmse: 0.5547686906688019\nEpoch  5 / 20  -  train_rmse: 0.5466300037437639\nEpoch  6 / 20  -  train_rmse: 0.5328242936133687\nEpoch  7 / 20  -  train_rmse: 0.5171638382987964\nEpoch  8 / 20  -  train_rmse: 0.5013124692639045\nEpoch  9 / 20  -  train_rmse: 0.485925623190334\nEpoch  10 / 20  -  train_rmse: 0.47120743485351135\nEpoch  11 / 20  -  train_rmse: 0.45717300346984496\nEpoch  12 / 20  -  train_rmse: 0.44376765423753367\nEpoch  13 / 20  -  train_rmse: 0.43091867509787507\nEpoch  14 / 20  -  train_rmse: 0.4185559896239487\nEpoch  15 / 20  -  train_rmse: 0.4066190389080836\nEpoch  16 / 20  -  train_rmse: 0.3950578946796036\nEpoch  17 / 20  -  train_rmse: 0.38383222864034194\nEpoch  18 / 20  -  train_rmse: 0.37290970429994413\nEpoch  19 / 20  -  train_rmse: 0.3622644141818156\nEpoch  20 / 20  -  train_rmse: 0.35187556748446197\n\nTest RMSE: 0.9136\nWall time: 5.45 s\n"
+     "text": "Epoch  1 / 20  -  train_rmse: 4.7519163235869755\nEpoch  2 / 20  -  train_rmse: 4.07125950177922\nEpoch  3 / 20  -  train_rmse: 3.6994707653121295\nEpoch  4 / 20  -  train_rmse: 3.487612945175548\nEpoch  5 / 20  -  train_rmse: 3.361677161458169\nEpoch  6 / 20  -  train_rmse: 3.2830956906142963\nEpoch  7 / 20  -  train_rmse: 3.2310618451542217\nEpoch  8 / 20  -  train_rmse: 3.194092982634919\nEpoch  9 / 20  -  train_rmse: 3.1657616120427647\nEpoch  10 / 20  -  train_rmse: 3.14243679531888\nEpoch  11 / 20  -  train_rmse: 3.122052194110065\nEpoch  12 / 20  -  train_rmse: 3.1034212511623207\nEpoch  13 / 20  -  train_rmse: 3.085852518150945\nEpoch  14 / 20  -  train_rmse: 3.068932643826073\nEpoch  15 / 20  -  train_rmse: 3.052403973330817\nEpoch  16 / 20  -  train_rmse: 3.036095775003364\nEpoch  17 / 20  -  train_rmse: 3.019885868491791\nEpoch  18 / 20  -  train_rmse: 3.003679427500367\nEpoch  19 / 20  -  train_rmse: 2.9873974174428293\nEpoch  20 / 20  -  train_rmse: 2.9709703793155584\n\nTest RMSE: 0.9163\nWall time: 5.59 s\n"
     }
    ],
    "source": [
     "%%time \n",
     "random.seed(2)\n",
     "np.random.seed(2)\n",
-    "svd = SVD(n_epochs = 20, n_factors = 100, verbose = 1, lr = 0.001, reg = 0.005)\n",
-    "svd.fit(train)\n",
+    "matrix_fact = MatrixFactorization(n_epochs = 20, n_factors = 100, verbose = 1, lr = 0.001, reg = 0.005)\n",
+    "matrix_fact.fit(train)\n",
     "\n",
-    "pred = svd.predict(test)\n",
+    "pred = matrix_fact.predict(test)\n",
     "rmse = mean_squared_error(test['rating'], pred, squared = False)\n",
     "\n",
     "print(f'\\nTest RMSE: {rmse:.4f}')"
@@ -158,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,49 +325,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
-      "\n",
-      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.9265  0.9351  0.9324  0.9415  0.9408  0.9353  0.0056  \n",
-      "MAE (testset)     0.7294  0.7344  0.7358  0.7421  0.7399  0.7363  0.0044  \n",
-      "Fit time          4.16    4.19    4.22    4.25    4.20    4.20    0.03    \n",
-      "Test time         0.13    0.45    0.11    0.11    0.11    0.18    0.13    \n",
-      "Wall time: 22.6 s\n"
-     ]
+     "name": "stdout",
+     "text": "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n\n                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \nRMSE (testset)    0.9315  0.9319  0.9371  0.9483  0.9311  0.9360  0.0065  \nMAE (testset)     0.7346  0.7348  0.7381  0.7454  0.7353  0.7376  0.0041  \nFit time          5.25    4.75    4.70    4.66    4.71    4.81    0.22    \nTest time         0.16    0.13    0.20    0.14    0.12    0.15    0.03    \nWall time: 25.7 s\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "{'test_rmse': array([0.92651162, 0.93507166, 0.93241232, 0.94154717, 0.94084358]),\n",
-       " 'test_mae': array([0.72938989, 0.73444756, 0.73576219, 0.74210202, 0.73993852]),\n",
-       " 'fit_time': (4.163815021514893,\n",
-       "  4.187639236450195,\n",
-       "  4.216679334640503,\n",
-       "  4.247923374176025,\n",
-       "  4.1983418464660645),\n",
-       " 'test_time': (0.12666082382202148,\n",
-       "  0.45206427574157715,\n",
-       "  0.11275815963745117,\n",
-       "  0.1120297908782959,\n",
-       "  0.11228561401367188)}"
-      ]
+      "text/plain": "{'test_rmse': array([0.93150639, 0.93190626, 0.93712494, 0.94831838, 0.93106516]),\n 'test_mae': array([0.7345864 , 0.73479604, 0.73812511, 0.74543866, 0.7352659 ]),\n 'fit_time': (5.246900796890259,\n  4.746541976928711,\n  4.704091310501099,\n  4.6643593311309814,\n  4.708273649215698),\n 'test_time': (0.1593332290649414,\n  0.132645845413208,\n  0.20246028900146484,\n  0.140625,\n  0.12167477607727051)}"
      },
-     "execution_count": 91,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
     "%%time\n",
     "# We'll use the famous SVD algorithm.\n",
-    "algo = sp.SVD()\n",
+    "algo = sp.AlgoBase()\n",
     "\n",
     "# Run 5-fold cross-validation and print results\n",
     "sp.model_selection.cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)"
@@ -218,33 +353,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "RMSE: 0.9169\n",
-      "Wall time: 31.1 s\n"
-     ]
+     "name": "stdout",
+     "text": "Estimating biases using als...\nRMSE: 0.9091\nWall time: 7.84 s\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "0.9168845476049273"
-      ]
+      "text/plain": "0.9090794242564598"
      },
-     "execution_count": 93,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 90
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "surprise_svd = sp.SVD(lr_all=0.001, reg_all=0.005, n_epochs=20,\n",
-    "          n_factors=50)\n",
+    "# surprise_svd = sp.SVD(lr_all=0.001, reg_all=0.005, n_epochs=20, n_factors=50)\n",
+    "surprise_svd = sp.BaselineOnly()\n",
     "\n",
     "reader = sp.Reader()\n",
     "\n",
@@ -254,45 +384,6 @@
     "\n",
     "pred = surprise_svd.test(data_test)\n",
     "sp.accuracy.rmse(pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Prediction(uid=259, iid=200, r_ui=4.0, est=4.1670259763161255, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=357, r_ui=5.0, est=4.430772728105106, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=179, r_ui=4.0, est=4.20424005908081, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=1135, r_ui=5.0, est=3.231236971348656, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=15, r_ui=3.0, est=3.91758055378108, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=121, r_ui=3.0, est=3.590538369392122, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=294, r_ui=3.0, est=3.2821077351936805, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=748, r_ui=4.0, est=3.323876222072292, details={'was_impossible': False}),\n",
-       " Prediction(uid=259, iid=147, r_ui=4.0, est=3.8508097317210708, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=696, r_ui=3.0, est=3.3294724032153775, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=473, r_ui=4.0, est=3.4560562799048773, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=290, r_ui=4.0, est=3.153519835790711, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=717, r_ui=3.0, est=2.8874506227253445, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=815, r_ui=3.0, est=3.3480640461758178, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=405, r_ui=5.0, est=3.274042812465488, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=924, r_ui=4.0, est=3.558746617931548, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=1094, r_ui=1.0, est=3.3761615671176846, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=1245, r_ui=4.0, est=3.437682521354039, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=411, r_ui=3.0, est=2.9552410061418772, details={'was_impossible': False}),\n",
-       " Prediction(uid=851, iid=831, r_ui=5.0, est=2.636413116665653, details={'was_impossible': False})]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "surprise_svd.test(data_test)[:20]"
    ]
   }
  ],
