Added example with updating model with new user in Baseline Model

--- a/notebooks/recommender-system.ipynb
+++ b/notebooks/recommender-system.ipynb
@@ -2,15 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-    }
-   ],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# Data manipulation\n",
     "import numpy as np\n",
@@ -36,7 +32,9 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
-    "from src import *"
+    "from src import *\n",
+    "\n",
+    "rand_seed = 2"
    ]
   },
   {
@@ -59,12 +57,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = ['u_id', 'i_id', 'rating', 'timestamp']\n",
-    "movie_data = pd.read_csv('../data/ml-1m/ratings.dat', names = cols, sep = '::', usecols=[0, 1, 2])\n",
+    "cols = ['user_id', 'item_id', 'rating', 'timestamp']\n",
+    "movie_data = pd.read_csv('../data/ml-1m/ratings.dat', names = cols, sep = '::', usecols=[0, 1, 2], engine='python')\n",
     "\n",
     "# Prepare data\n",
-    "train = movie_data.sample(frac=0.8)\n",
-    "test = movie_data.drop(train.index.tolist())"
+    "train = movie_data.sample(frac=0.8, random_state=rand_seed)\n",
+    "test = movie_data.drop(train.index.tolist())\n",
+    "\n",
+    "# Prepare data for updates\n",
+    "users_update = [2, 500, 700]\n",
+    "train_start = movie_data.query('user_id not in @users_update')\n",
+    "data_update = movie_data.query('user_id in @users_update')\n",
+    "train_update = data_update.sample(frac=0.8, random_state=rand_seed)\n",
+    "test_update = data_update.drop(train_update.index.tolist())"
    ]
   },
   {
@@ -75,14 +80,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "This is essentially just the global standard deviation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\nTest RMSE: 1.117850\n"
+     "text": "\nTest RMSE: 1.119044\n\n Or equivalently the standard deviation: 1.1166159863745446\n"
     }
    ],
    "source": [
@@ -91,7 +105,9 @@
     "\n",
     "rmse = mean_squared_error(test['rating'], pred, squared = False)\n",
     "\n",
-    "print(f'\\nTest RMSE: {rmse:4f}')"
+    "print(f'\\nTest RMSE: {rmse:4f}')\n",
+    "\n",
+    "print(f\"\\n Or equivalently the standard deviation: {train['rating'].std()}\")"
    ]
   },
   {
@@ -110,13 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch  1 / 20  -  train_rmse: 0.871980978214218\nEpoch  2 / 20  -  train_rmse: 0.8374227238174543\nEpoch  3 / 20  -  train_rmse: 0.8245628365555198\nEpoch  4 / 20  -  train_rmse: 0.8181313766158749\nEpoch  5 / 20  -  train_rmse: 0.8144161721838907\nEpoch  6 / 20  -  train_rmse: 0.8120702230072291\nEpoch  7 / 20  -  train_rmse: 0.8104958250944153\nEpoch  8 / 20  -  train_rmse: 0.8093910914643307\nEpoch  9 / 20  -  train_rmse: 0.8085888629632715\nEpoch  10 / 20  -  train_rmse: 0.8079900351762842\nEpoch  11 / 20  -  train_rmse: 0.8075326908098902\nEpoch  12 / 20  -  train_rmse: 0.8071765151351332\nEpoch  13 / 20  -  train_rmse: 0.8068943680095578\nEpoch  14 / 20  -  train_rmse: 0.8066674668501668\nEpoch  15 / 20  -  train_rmse: 0.8064825062164301\nEpoch  16 / 20  -  train_rmse: 0.8063298697247823\nEpoch  17 / 20  -  train_rmse: 0.8062024845531691\nEpoch  18 / 20  -  train_rmse: 0.8060950676200299\nEpoch  19 / 20  -  train_rmse: 0.8060036178439534\nEpoch  20 / 20  -  train_rmse: 0.8059250671127095\n\nTest RMSE: 0.9094\nWall time: 352 ms\n"
+     "text": "Epoch  1 / 20  -  train_rmse: 0.933494571686373\nEpoch  2 / 20  -  train_rmse: 0.9148579764576709\nEpoch  3 / 20  -  train_rmse: 0.9078240789151573\nEpoch  4 / 20  -  train_rmse: 0.9042828382011496\nEpoch  5 / 20  -  train_rmse: 0.9022289689573211\nEpoch  6 / 20  -  train_rmse: 0.9009285538160273\nEpoch  7 / 20  -  train_rmse: 0.9000541124488959\nEpoch  8 / 20  -  train_rmse: 0.8994395808144476\nEpoch  9 / 20  -  train_rmse: 0.8989927407083671\nEpoch  10 / 20  -  train_rmse: 0.8986588050589224\nEpoch  11 / 20  -  train_rmse: 0.898403494044068\nEpoch  12 / 20  -  train_rmse: 0.8982044636330987\nEpoch  13 / 20  -  train_rmse: 0.8980466587695454\nEpoch  14 / 20  -  train_rmse: 0.8979196525732741\nEpoch  15 / 20  -  train_rmse: 0.8978160532085211\nEpoch  16 / 20  -  train_rmse: 0.8977305140627257\nEpoch  17 / 20  -  train_rmse: 0.8976590993040879\nEpoch  18 / 20  -  train_rmse: 0.8975988662385087\nEpoch  19 / 20  -  train_rmse: 0.8975475839461394\nEpoch  20 / 20  -  train_rmse: 0.8975035398315944\n\nTest RMSE: 0.9097\nWall time: 1.48 s\n"
     }
    ],
    "source": [
@@ -140,127 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
-    "tags": [
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch  1 / 20  -  train_rmse: 0.8431114587618241\nEpoch  2 / 20  -  train_rmse: 0.8054503687558924\nEpoch  3 / 20  -  train_rmse: 0.8037076611607052\nEpoch  4 / 20  -  train_rmse: 0.803611324323333\nEpoch  5 / 20  -  train_rmse: 0.8036057069019398\nEpoch  6 / 20  -  train_rmse: 0.8036053692857239\nEpoch  7 / 20  -  train_rmse: 0.8036053477643588\nEpoch  8 / 20  -  train_rmse: 0.8036053461252116\nEpoch  9 / 20  -  train_rmse: 0.8036053459404653\nEpoch  10 / 20  -  train_rmse: 0.8036053459081435\nEpoch  11 / 20  -  train_rmse: 0.803605345900974\nEpoch  12 / 20  -  train_rmse: 0.8036053458992236\nEpoch  13 / 20  -  train_rmse: 0.8036053458987541\nEpoch  14 / 20  -  train_rmse: 0.8036053458985319\nEpoch  15 / 20  -  train_rmse: 0.8036053458984738\nEpoch  16 / 20  -  train_rmse: 0.8036053458983718\nEpoch  17 / 20  -  train_rmse: 0.8036053458982573\nEpoch  18 / 20  -  train_rmse: 0.8036053458981735\nEpoch  19 / 20  -  train_rmse: 0.8036053458980996\nEpoch  20 / 20  -  train_rmse: 0.803605345898018\n\nTest RMSE: 0.9090\nWall time: 2.33 s\n"
+     "text": "Epoch  1 / 20  -  train_rmse: 0.9178374472516706\nEpoch  2 / 20  -  train_rmse: 0.897307281620994\nEpoch  3 / 20  -  train_rmse: 0.8963564345409184\nEpoch  4 / 20  -  train_rmse: 0.8963042132630377\nEpoch  5 / 20  -  train_rmse: 0.8963011841494454\nEpoch  6 / 20  -  train_rmse: 0.8963010029148099\nEpoch  7 / 20  -  train_rmse: 0.8963009914026157\nEpoch  8 / 20  -  train_rmse: 0.8963009905265219\nEpoch  9 / 20  -  train_rmse: 0.8963009904274769\nEpoch  10 / 20  -  train_rmse: 0.896300990410144\nEpoch  11 / 20  -  train_rmse: 0.8963009904063131\nEpoch  12 / 20  -  train_rmse: 0.8963009904053619\nEpoch  13 / 20  -  train_rmse: 0.8963009904050973\nEpoch  14 / 20  -  train_rmse: 0.8963009904050061\nEpoch  15 / 20  -  train_rmse: 0.8963009904049439\nEpoch  16 / 20  -  train_rmse: 0.8963009904049123\nEpoch  17 / 20  -  train_rmse: 0.896300990404848\nEpoch  18 / 20  -  train_rmse: 0.8963009904047935\nEpoch  19 / 20  -  train_rmse: 0.8963009904047731\nEpoch  20 / 20  -  train_rmse: 0.8963009904046988\n\nTest RMSE: 0.9093\nWall time: 1.13 s\n"
     }
    ],
    "source": [
@@ -279,18 +185,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SVD by Simon Funk"
+    "### Updating with new users"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch  1 / 20  -  train_rmse: 4.7519163235869755\nEpoch  2 / 20  -  train_rmse: 4.07125950177922\nEpoch  3 / 20  -  train_rmse: 3.6994707653121295\nEpoch  4 / 20  -  train_rmse: 3.487612945175548\nEpoch  5 / 20  -  train_rmse: 3.361677161458169\nEpoch  6 / 20  -  train_rmse: 3.2830956906142963\nEpoch  7 / 20  -  train_rmse: 3.2310618451542217\nEpoch  8 / 20  -  train_rmse: 3.194092982634919\nEpoch  9 / 20  -  train_rmse: 3.1657616120427647\nEpoch  10 / 20  -  train_rmse: 3.14243679531888\nEpoch  11 / 20  -  train_rmse: 3.122052194110065\nEpoch  12 / 20  -  train_rmse: 3.1034212511623207\nEpoch  13 / 20  -  train_rmse: 3.085852518150945\nEpoch  14 / 20  -  train_rmse: 3.068932643826073\nEpoch  15 / 20  -  train_rmse: 3.052403973330817\nEpoch  16 / 20  -  train_rmse: 3.036095775003364\nEpoch  17 / 20  -  train_rmse: 3.019885868491791\nEpoch  18 / 20  -  train_rmse: 3.003679427500367\nEpoch  19 / 20  -  train_rmse: 2.9873974174428293\nEpoch  20 / 20  -  train_rmse: 2.9709703793155584\n\nTest RMSE: 0.9163\nWall time: 5.59 s\n"
+     "text": "Epoch  1 / 20  -  train_rmse: 0.9191803443219464\nEpoch  2 / 20  -  train_rmse: 0.8987037513062358\nEpoch  3 / 20  -  train_rmse: 0.8977609464578302\nEpoch  4 / 20  -  train_rmse: 0.8977092277636958\nEpoch  5 / 20  -  train_rmse: 0.8977061626808502\nEpoch  6 / 20  -  train_rmse: 0.8977059587033653\nEpoch  7 / 20  -  train_rmse: 0.8977059405810108\nEpoch  8 / 20  -  train_rmse: 0.8977059380120525\nEpoch  9 / 20  -  train_rmse: 0.8977059374795142\nEpoch  10 / 20  -  train_rmse: 0.897705937337243\nEpoch  11 / 20  -  train_rmse: 0.8977059372831977\nEpoch  12 / 20  -  train_rmse: 0.8977059372501258\nEpoch  13 / 20  -  train_rmse: 0.8977059372221129\nEpoch  14 / 20  -  train_rmse: 0.8977059371953395\nEpoch  15 / 20  -  train_rmse: 0.8977059371688736\nEpoch  16 / 20  -  train_rmse: 0.8977059371424928\nEpoch  17 / 20  -  train_rmse: 0.8977059371161288\nEpoch  18 / 20  -  train_rmse: 0.8977059370898027\nEpoch  19 / 20  -  train_rmse: 0.8977059370635059\nEpoch  20 / 20  -  train_rmse: 0.8977059370372027\n\nUpdate model\nEpoch  1 / 20  -  train_rmse: 127.91791734236294\nEpoch  2 / 20  -  train_rmse: 127.73740166511926\nEpoch  3 / 20  -  train_rmse: 127.67496725853252\nEpoch  4 / 20  -  train_rmse: 127.65700766237863\nEpoch  5 / 20  -  train_rmse: 127.65462370586171\nEpoch  6 / 20  -  train_rmse: 127.65687373041655\nEpoch  7 / 20  -  train_rmse: 127.65988137065318\nEpoch  8 / 20  -  train_rmse: 127.66245897363436\nEpoch  9 / 20  -  train_rmse: 127.6643816049387\nEpoch  10 / 20  -  train_rmse: 127.66572699712657\nEpoch  11 / 20  -  train_rmse: 127.66663689173943\nEpoch  12 / 20  -  train_rmse: 127.6672402782877\nEpoch  13 / 20  -  train_rmse: 127.66763569950254\nEpoch  14 / 20  -  train_rmse: 127.6678929432526\nEpoch  15 / 20  -  train_rmse: 127.66805952425187\nEpoch  16 / 20  -  train_rmse: 127.6681670770751\nEpoch  17 / 20  -  train_rmse: 127.66823638443415\nEpoch  18 / 20  -  train_rmse: 127.66828098837591\nEpoch  19 / 20  -  train_rmse: 127.66830966779558\nEpoch  20 / 20  -  train_rmse: 127.66832809530862\n\nTest RMSE: 2.4991\nWall time: 532 ms\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "baseline_model = BaselineModel(method='als', n_epochs = 20, reg = 0.05, verbose=1)\n",
+    "baseline_model.fit(train_start)\n",
+    "\n",
+    "print('\\nUpdate model')\n",
+    "baseline_model.update_users(train_update, verbose=1)\n",
+    "pred = baseline_model.predict(test_update)\n",
+    "rmse = mean_squared_error(test_update['rating'], pred, squared = False)\n",
+    "\n",
+    "print(f'\\nTest RMSE: {rmse:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix Factorization (FunkSVD) by Simon Funk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Epoch  1 / 20  -  train_rmse: 1.0127035036057546\nEpoch  2 / 20  -  train_rmse: 0.973399904124025\nEpoch  3 / 20  -  train_rmse: 0.9522201402680913\nEpoch  4 / 20  -  train_rmse: 0.9386090696979279\nEpoch  5 / 20  -  train_rmse: 0.9288639526799425\nEpoch  6 / 20  -  train_rmse: 0.9213635578752073\nEpoch  7 / 20  -  train_rmse: 0.9152878929802353\nEpoch  8 / 20  -  train_rmse: 0.9101754454103971\nEpoch  9 / 20  -  train_rmse: 0.9057441442060727\nEpoch  10 / 20  -  train_rmse: 0.9018099719719699\nEpoch  11 / 20  -  train_rmse: 0.8982463727688216\nEpoch  12 / 20  -  train_rmse: 0.8949624194855501\nEpoch  13 / 20  -  train_rmse: 0.8918903129755686\nEpoch  14 / 20  -  train_rmse: 0.8889778398420741\nEpoch  15 / 20  -  train_rmse: 0.8861836186228284\nEpoch  16 / 20  -  train_rmse: 0.8834739938870996\nEpoch  17 / 20  -  train_rmse: 0.8808209488836901\nEpoch  18 / 20  -  train_rmse: 0.8782006746379216\nEpoch  19 / 20  -  train_rmse: 0.8755925796334392\nEpoch  20 / 20  -  train_rmse: 0.8729786073783997\n\nTest RMSE: 0.9171\nWall time: 7.36 s\n"
     }
    ],
    "source": [
@@ -329,17 +270,39 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n\n                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \nRMSE (testset)    0.9315  0.9319  0.9371  0.9483  0.9311  0.9360  0.0065  \nMAE (testset)     0.7346  0.7348  0.7381  0.7454  0.7353  0.7376  0.0041  \nFit time          5.25    4.75    4.70    4.66    4.71    4.81    0.22    \nTest time         0.16    0.13    0.20    0.14    0.12    0.15    0.03    \nWall time: 25.7 s\n"
+     "output_type": "stream",
+     "text": [
+      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.9315  0.9319  0.9371  0.9483  0.9311  0.9360  0.0065  \n",
+      "MAE (testset)     0.7346  0.7348  0.7381  0.7454  0.7353  0.7376  0.0041  \n",
+      "Fit time          5.25    4.75    4.70    4.66    4.71    4.81    0.22    \n",
+      "Test time         0.16    0.13    0.20    0.14    0.12    0.15    0.03    \n",
+      "Wall time: 25.7 s\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "{'test_rmse': array([0.93150639, 0.93190626, 0.93712494, 0.94831838, 0.93106516]),\n 'test_mae': array([0.7345864 , 0.73479604, 0.73812511, 0.74543866, 0.7352659 ]),\n 'fit_time': (5.246900796890259,\n  4.746541976928711,\n  4.704091310501099,\n  4.6643593311309814,\n  4.708273649215698),\n 'test_time': (0.1593332290649414,\n  0.132645845413208,\n  0.20246028900146484,\n  0.140625,\n  0.12167477607727051)}"
+      "text/plain": [
+       "{'test_rmse': array([0.93150639, 0.93190626, 0.93712494, 0.94831838, 0.93106516]),\n",
+       " 'test_mae': array([0.7345864 , 0.73479604, 0.73812511, 0.74543866, 0.7352659 ]),\n",
+       " 'fit_time': (5.246900796890259,\n",
+       "  4.746541976928711,\n",
+       "  4.704091310501099,\n",
+       "  4.6643593311309814,\n",
+       "  4.708273649215698),\n",
+       " 'test_time': (0.1593332290649414,\n",
+       "  0.132645845413208,\n",
+       "  0.20246028900146484,\n",
+       "  0.140625,\n",
+       "  0.12167477607727051)}"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -357,17 +320,23 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Estimating biases using als...\nRMSE: 0.9091\nWall time: 7.84 s\n"
+     "output_type": "stream",
+     "text": [
+      "Estimating biases using als...\n",
+      "RMSE: 0.9091\n",
+      "Wall time: 7.84 s\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "0.9090794242564598"
+      "text/plain": [
+       "0.9090794242564598"
+      ]
      },
+     "execution_count": 90,
      "metadata": {},
-     "execution_count": 90
+     "output_type": "execute_result"
     }
    ],
    "source": [
