Update notebook to use package on pypi

--- a/examples/recommender-system.ipynb
+++ b/examples/recommender-system.ipynb
@@ -13,7 +13,8 @@
     "import pandas as pd\n",
     "pd.options.display.max_rows = 100\n",
     "\n",
-    "# Recommender systems\n",
+    "# Modeling\n",
+    "from matrix_factorization import BaselineModel, KernelMF, train_update_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -21,12 +22,6 @@
     "import os\n",
     "import random\n",
     "import sys\n",
-    "\n",
-    "# Custom modules\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "from src import BaselineModel, KernelMF, train_update_test_split\n",
     "\n",
     "# Reload imported code \n",
     "%load_ext autoreload\n",
@@ -271,7 +266,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.9163116821781069\n",
       "\n",
       "Test RMSE: 0.9297\n",
-      "Wall time: 1.47 s\n"
+      "Wall time: 1.38 s\n"
      ]
     }
    ],
@@ -444,7 +439,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.9133423557930989\n",
       "\n",
       "Test RMSE: 0.9294\n",
-      "Wall time: 970 ms\n"
+      "Wall time: 857 ms\n"
      ]
     }
    ],
@@ -549,7 +544,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.93963512123345\n",
       "\n",
       "Test RMSE: 0.9484\n",
-      "Wall time: 530 ms\n"
+      "Wall time: 434 ms\n"
      ]
     }
    ],
@@ -607,7 +602,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.9130202831875339\n",
       "\n",
       "Test RMSE: 0.9534\n",
-      "Wall time: 7.01 s\n"
+      "Wall time: 6.37 s\n"
      ]
     }
    ],
@@ -766,26 +761,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 1.0806769510365133\n",
-      "Epoch  2 / 20  -  train_rmse: 1.0477825319269505\n",
-      "Epoch  3 / 20  -  train_rmse: 1.0248570868548645\n",
-      "Epoch  4 / 20  -  train_rmse: 1.0078256016126597\n",
-      "Epoch  5 / 20  -  train_rmse: 0.9945347992215336\n",
-      "Epoch  6 / 20  -  train_rmse: 0.9837550875667583\n",
-      "Epoch  7 / 20  -  train_rmse: 0.9747369995816144\n",
-      "Epoch  8 / 20  -  train_rmse: 0.9669991937521079\n",
-      "Epoch  9 / 20  -  train_rmse: 0.9602192910797149\n",
-      "Epoch  10 / 20  -  train_rmse: 0.9541738017930299\n",
-      "Epoch  11 / 20  -  train_rmse: 0.9487031919453456\n",
-      "Epoch  12 / 20  -  train_rmse: 0.9436906407047134\n",
-      "Epoch  13 / 20  -  train_rmse: 0.9390486424675816\n",
-      "Epoch  14 / 20  -  train_rmse: 0.9347102948230672\n",
-      "Epoch  15 / 20  -  train_rmse: 0.9306234833477668\n",
-      "Epoch  16 / 20  -  train_rmse: 0.92674691013553\n",
-      "Epoch  17 / 20  -  train_rmse: 0.9230473257681504\n",
-      "Epoch  18 / 20  -  train_rmse: 0.9194975644600301\n",
-      "Epoch  19 / 20  -  train_rmse: 0.9160751259998481\n",
-      "Epoch  20 / 20  -  train_rmse: 0.9127611366868937\n"
+      "Epoch  1 / 20  -  train_rmse: 1.0705746932381526\n",
+      "Epoch  2 / 20  -  train_rmse: 1.0382660426957875\n",
+      "Epoch  3 / 20  -  train_rmse: 1.016215024525483\n",
+      "Epoch  4 / 20  -  train_rmse: 0.9999227294660362\n",
+      "Epoch  5 / 20  -  train_rmse: 0.9872249839452364\n",
+      "Epoch  6 / 20  -  train_rmse: 0.9769265257288504\n",
+      "Epoch  7 / 20  -  train_rmse: 0.9683048573697514\n",
+      "Epoch  8 / 20  -  train_rmse: 0.9608970562505023\n",
+      "Epoch  9 / 20  -  train_rmse: 0.9543939579409526\n",
+      "Epoch  10 / 20  -  train_rmse: 0.9485821217812994\n",
+      "Epoch  11 / 20  -  train_rmse: 0.9433098947660511\n",
+      "Epoch  12 / 20  -  train_rmse: 0.9384666913135622\n",
+      "Epoch  13 / 20  -  train_rmse: 0.9339699264597934\n",
+      "Epoch  14 / 20  -  train_rmse: 0.9297565525057904\n",
+      "Epoch  15 / 20  -  train_rmse: 0.9257774469205091\n",
+      "Epoch  16 / 20  -  train_rmse: 0.9219936103680543\n",
+      "Epoch  17 / 20  -  train_rmse: 0.918373539403859\n",
+      "Epoch  18 / 20  -  train_rmse: 0.9148913769568732\n",
+      "Epoch  19 / 20  -  train_rmse: 0.911525587551766\n",
+      "Epoch  20 / 20  -  train_rmse: 0.9082579928457778\n"
      ]
     },
     {
@@ -801,7 +796,7 @@
    ],
    "source": [
     "matrix_fact = KernelMF(n_epochs = 20, n_factors = 100, verbose = 1, lr = 0.001, reg = 0.005)\n",
-    "matrix_fact.fit(X_train, y_train)"
+    "matrix_fact.fit(X_train_initial, y_train_initial)"
    ]
   },
   {
@@ -813,29 +808,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 1.0335167434427603\n",
-      "Epoch  2 / 20  -  train_rmse: 1.0132664822474249\n",
-      "Epoch  3 / 20  -  train_rmse: 0.9981727084279339\n",
-      "Epoch  4 / 20  -  train_rmse: 0.9866954056475316\n",
-      "Epoch  5 / 20  -  train_rmse: 0.9777679011941374\n",
-      "Epoch  6 / 20  -  train_rmse: 0.9706540436587896\n",
-      "Epoch  7 / 20  -  train_rmse: 0.9648455179483753\n",
-      "Epoch  8 / 20  -  train_rmse: 0.9599899331086171\n",
-      "Epoch  9 / 20  -  train_rmse: 0.9558413044269176\n",
-      "Epoch  10 / 20  -  train_rmse: 0.9522263043218575\n",
-      "Epoch  11 / 20  -  train_rmse: 0.949021386714752\n",
-      "Epoch  12 / 20  -  train_rmse: 0.9461373119122087\n",
-      "Epoch  13 / 20  -  train_rmse: 0.9435086694671466\n",
-      "Epoch  14 / 20  -  train_rmse: 0.94108676307001\n",
-      "Epoch  15 / 20  -  train_rmse: 0.9388347543154136\n",
-      "Epoch  16 / 20  -  train_rmse: 0.9367243256577482\n",
-      "Epoch  17 / 20  -  train_rmse: 0.9347333679494791\n",
-      "Epoch  18 / 20  -  train_rmse: 0.9328443620328386\n",
-      "Epoch  19 / 20  -  train_rmse: 0.9310432332572303\n",
-      "Epoch  20 / 20  -  train_rmse: 0.9293185306052074\n",
+      "Epoch  1 / 20  -  train_rmse: 1.0398656868356\n",
+      "Epoch  2 / 20  -  train_rmse: 1.0205576874442035\n",
+      "Epoch  3 / 20  -  train_rmse: 1.005932072259718\n",
+      "Epoch  4 / 20  -  train_rmse: 0.994657890390333\n",
+      "Epoch  5 / 20  -  train_rmse: 0.985793674422776\n",
+      "Epoch  6 / 20  -  train_rmse: 0.9786755773344993\n",
+      "Epoch  7 / 20  -  train_rmse: 0.9728353493432004\n",
+      "Epoch  8 / 20  -  train_rmse: 0.9679416274302333\n",
+      "Epoch  9 / 20  -  train_rmse: 0.9637585721547791\n",
+      "Epoch  10 / 20  -  train_rmse: 0.9601170133421498\n",
+      "Epoch  11 / 20  -  train_rmse: 0.9568944335345086\n",
+      "Epoch  12 / 20  -  train_rmse: 0.9540011144651367\n",
+      "Epoch  13 / 20  -  train_rmse: 0.9513705470566537\n",
+      "Epoch  14 / 20  -  train_rmse: 0.9489527779171221\n",
+      "Epoch  15 / 20  -  train_rmse: 0.9467097748161197\n",
+      "Epoch  16 / 20  -  train_rmse: 0.9446121807344438\n",
+      "Epoch  17 / 20  -  train_rmse: 0.9426370248154202\n",
+      "Epoch  18 / 20  -  train_rmse: 0.9407660949988312\n",
+      "Epoch  19 / 20  -  train_rmse: 0.9389847703547473\n",
+      "Epoch  20 / 20  -  train_rmse: 0.9372811746783785\n",
       "\n",
-      "Test RMSE: 0.9587\n",
-      "Wall time: 1.38 s\n"
+      "Test RMSE: 0.9677\n",
+      "Wall time: 1.11 s\n"
      ]
     }
    ],
@@ -865,29 +860,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 1.725202947628606\n",
-      "Epoch  2 / 20  -  train_rmse: 1.6999747055932068\n",
-      "Epoch  3 / 20  -  train_rmse: 1.6618018359858258\n",
-      "Epoch  4 / 20  -  train_rmse: 1.6204730945339612\n",
-      "Epoch  5 / 20  -  train_rmse: 1.5749281689395818\n",
-      "Epoch  6 / 20  -  train_rmse: 1.5224041210704415\n",
-      "Epoch  7 / 20  -  train_rmse: 1.4644478072153337\n",
-      "Epoch  8 / 20  -  train_rmse: 1.4077580850166025\n",
-      "Epoch  9 / 20  -  train_rmse: 1.356459235463336\n",
-      "Epoch  10 / 20  -  train_rmse: 1.3112529919376095\n",
-      "Epoch  11 / 20  -  train_rmse: 1.2717593804876832\n",
-      "Epoch  12 / 20  -  train_rmse: 1.2371710598616994\n",
-      "Epoch  13 / 20  -  train_rmse: 1.2066300228526485\n",
-      "Epoch  14 / 20  -  train_rmse: 1.179438194948444\n",
-      "Epoch  15 / 20  -  train_rmse: 1.1550596517006106\n",
-      "Epoch  16 / 20  -  train_rmse: 1.1330667391063793\n",
-      "Epoch  17 / 20  -  train_rmse: 1.113098328587808\n",
-      "Epoch  18 / 20  -  train_rmse: 1.0948389114935129\n",
-      "Epoch  19 / 20  -  train_rmse: 1.0780132949248713\n",
-      "Epoch  20 / 20  -  train_rmse: 1.0623875639268077\n",
+      "Epoch  1 / 20  -  train_rmse: 1.7254777443622737\n",
+      "Epoch  2 / 20  -  train_rmse: 1.7002770272866834\n",
+      "Epoch  3 / 20  -  train_rmse: 1.6621854353211043\n",
+      "Epoch  4 / 20  -  train_rmse: 1.6210519279111004\n",
+      "Epoch  5 / 20  -  train_rmse: 1.5756817133636316\n",
+      "Epoch  6 / 20  -  train_rmse: 1.5234665705656611\n",
+      "Epoch  7 / 20  -  train_rmse: 1.4658696361682801\n",
+      "Epoch  8 / 20  -  train_rmse: 1.4095143392284235\n",
+      "Epoch  9 / 20  -  train_rmse: 1.3585098674330331\n",
+      "Epoch  10 / 20  -  train_rmse: 1.3134812994218037\n",
+      "Epoch  11 / 20  -  train_rmse: 1.274038256061191\n",
+      "Epoch  12 / 20  -  train_rmse: 1.2394121109949494\n",
+      "Epoch  13 / 20  -  train_rmse: 1.2087791097194398\n",
+      "Epoch  14 / 20  -  train_rmse: 1.181472989275656\n",
+      "Epoch  15 / 20  -  train_rmse: 1.1569867880380225\n",
+      "Epoch  16 / 20  -  train_rmse: 1.1349140014111203\n",
+      "Epoch  17 / 20  -  train_rmse: 1.1149046640922917\n",
+      "Epoch  18 / 20  -  train_rmse: 1.0966454852532301\n",
+      "Epoch  19 / 20  -  train_rmse: 1.0798574505097602\n",
+      "Epoch  20 / 20  -  train_rmse: 1.0643001689478164\n",
       "\n",
-      "Test RMSE: 1.1115\n",
-      "Wall time: 907 ms\n"
+      "Test RMSE: 1.1112\n",
+      "Wall time: 771 ms\n"
      ]
     }
    ],
@@ -918,29 +913,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 1.26154133538212\n",
-      "Epoch  2 / 20  -  train_rmse: 1.1097099291510482\n",
-      "Epoch  3 / 20  -  train_rmse: 1.0448209488461653\n",
-      "Epoch  4 / 20  -  train_rmse: 1.0032770687521049\n",
-      "Epoch  5 / 20  -  train_rmse: 0.9733291142518021\n",
-      "Epoch  6 / 20  -  train_rmse: 0.9510654958712049\n",
-      "Epoch  7 / 20  -  train_rmse: 0.9344179666780741\n",
-      "Epoch  8 / 20  -  train_rmse: 0.9219583070154398\n",
-      "Epoch  9 / 20  -  train_rmse: 0.9126147704541718\n",
-      "Epoch  10 / 20  -  train_rmse: 0.905580439476527\n",
-      "Epoch  11 / 20  -  train_rmse: 0.9002552285331626\n",
-      "Epoch  12 / 20  -  train_rmse: 0.8961969570267788\n",
-      "Epoch  13 / 20  -  train_rmse: 0.8930810871379538\n",
-      "Epoch  14 / 20  -  train_rmse: 0.8906694786565997\n",
-      "Epoch  15 / 20  -  train_rmse: 0.8887870317889877\n",
-      "Epoch  16 / 20  -  train_rmse: 0.8873045500183768\n",
-      "Epoch  17 / 20  -  train_rmse: 0.8861262734158962\n",
-      "Epoch  18 / 20  -  train_rmse: 0.8851808455049147\n",
-      "Epoch  19 / 20  -  train_rmse: 0.8844147792205334\n",
-      "Epoch  20 / 20  -  train_rmse: 0.8837877306297037\n",
+      "Epoch  1 / 20  -  train_rmse: 1.2617769898308766\n",
+      "Epoch  2 / 20  -  train_rmse: 1.1099584186466687\n",
+      "Epoch  3 / 20  -  train_rmse: 1.0449538509447247\n",
+      "Epoch  4 / 20  -  train_rmse: 1.0032850543994067\n",
+      "Epoch  5 / 20  -  train_rmse: 0.9731173033230605\n",
+      "Epoch  6 / 20  -  train_rmse: 0.9504936444747265\n",
+      "Epoch  7 / 20  -  train_rmse: 0.9333982521769938\n",
+      "Epoch  8 / 20  -  train_rmse: 0.920477552089845\n",
+      "Epoch  9 / 20  -  train_rmse: 0.9107142631785093\n",
+      "Epoch  10 / 20  -  train_rmse: 0.9033277879070493\n",
+      "Epoch  11 / 20  -  train_rmse: 0.8977237427403485\n",
+      "Epoch  12 / 20  -  train_rmse: 0.8934545543507805\n",
+      "Epoch  13 / 20  -  train_rmse: 0.8901858675242217\n",
+      "Epoch  14 / 20  -  train_rmse: 0.8876689219940567\n",
+      "Epoch  15 / 20  -  train_rmse: 0.8857188281332395\n",
+      "Epoch  16 / 20  -  train_rmse: 0.8841980100807602\n",
+      "Epoch  17 / 20  -  train_rmse: 0.8830038246632579\n",
+      "Epoch  18 / 20  -  train_rmse: 0.8820594029251833\n",
+      "Epoch  19 / 20  -  train_rmse: 0.881306916237868\n",
+      "Epoch  20 / 20  -  train_rmse: 0.8807026398556485\n",
       "\n",
-      "Test RMSE: 0.9689\n",
-      "Wall time: 1.74 s\n"
+      "Test RMSE: 0.9686\n",
+      "Wall time: 1.47 s\n"
      ]
     }
    ],
@@ -979,9 +974,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   24.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   56.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 405 out of 405 | elapsed:  2.4min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   17.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   39.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 405 out of 405 | elapsed:  1.9min finished\n"
      ]
     },
     {
@@ -1021,7 +1016,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.9255162499732297"
+       "-0.9252857357209816"
       ]
      },
      "execution_count": 16,
